# kronk-fastapi-dev

./: .env  .gitignore  README.md
certs/ca/: ca-key.pem  ca.pem  ca.srl
certs/docker/: docker-client-cert.pem  docker-client-key.pem  docker-client.csr  docker-server-cert.pem  docker-server-key.pem  docker-server.csr
certs/fastapi/: fastapi-client-cert.pem  fastapi-client-key.pem  fastapi-client.csr
certs/postgres/: pg-ext-prod.cnf  pg-server-dev-cert.pem  pg-server-dev.csr  pg-server-key.pem  pg-server-prod-cert.pem  pg-server-prod.csr
certs/redis/: redis-ext-prod.cnf  redis-server-dev-cert.pem  redis-server-dev.csr  redis-server-key.pem  redis-server-prod-cert.pem  redis-server-prod.csr
cluster/swarm/: README-REFINED.md  README.md
cluster/swarm/backend/: .env  docker-compose.backend.yml  docker-compose.kronk-fastapi.yml
cluster/swarm/grafana/: docker-compose.grafana.yml
cluster/swarm/monitoring/: docker-compose.cadvisor.yml  docker-compose.node-exporter.yml  docker-compose.socat.yml  portainer.yml  promtail.yml
cluster/swarm/monitoring/alertmanager/: alert.rules  alertmanager.yml
cluster/swarm/monitoring/loki/: loki.yml
cluster/swarm/monitoring/prometheus/: config.yml  config_swarm.yml  docker-compose.prometheus.yml
cluster/swarm/prometheus/: config.yml  docker-compose.prometheus.yml
cluster/swarm/traefik/: docker-compose.traefik.yml
cluster/swarm/traefik/config/: acme.json
pod/: .env  alembic.ini  kronk-production-firebase-adminsdk.json  main.py  pyproject.toml
pod/alembic/: env.py
pod/alembic/versions/: 1a42c2fd3a28_rename_comment_mode_to_commenting_policy.py  3a897ef07379_initial_migration.py  40df8a0448fe_initial_migration.py  41e9270b697a_rename_scheduled_time_to_scheduled_at.py  52503215475e_initial_migration.py  5f272f954c8b_initial_migration.py  7b20d18649a8_initial_migration.py  8c9c417eb34f_renamed_to_quote_id_from_quoted_feed_id.py  b77bfad0202e_rename_scheduled_time_to_scheduled_at_.py  b902c9568448_rename_commenting_policy_to_comment_.py  f2e06ec35aeb_added_passive_deletes_true.py
pod/apps/admin_app/: routes.py  tasks.py  ws.py
pod/apps/chats_app/: models.py  routes.py  schemas.py  ws.py
pod/apps/education_app/notes/: models.py  routes.py
pod/apps/feeds_app/: models.py  routes.py  schemas.py  tasks.py  ws.py
pod/apps/users_app/: models.py  routes.py  schemas.py  tasks.py
pod/my_taskiq/: tasks.py
pod/services/: azure_service.py  firebase_service.py  zepto_service.py
pod/settings/: my_config.py  my_database.py  my_dependency.py  my_exceptions.py  my_minio.py  my_redis.py  my_taskiq.py  my_websocket.py
pod/static/: privacy_policy.html  terms_of_service.html
pod/utility/: decorator.py  event_dispatcher.py  measure_time.py  my_enums.py  my_logger.py  my_middleware.py  my_types.py  utility.py  validators.py
service/: .env  docker-compose.yml
service/configurations/: redis-stack.conf
service/configurations/postgresql/: pg_hba.conf  postgresql.conf
service/configurations/redis/: redis.conf
